<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/LLlogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondologin"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|top"
            android:text="@string/txtLogin"
            android:textColor="@color/gris"
            android:textSize="@dimen/txtLogin" />

        <EditText
            android:id="@+id/etxtCorreo"
            android:layout_width="300dp"
            android:layout_height="30dp"
            android:layout_marginTop="200dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/fondoedittexttrans"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp"
            android:text="@string/txtCorreo"
            android:textColor="@color/gris" />

        <EditText
            android:id="@+id/etxtContra"
            android:layout_width="300dp"
            android:layout_height="30dp"
            android:layout_marginBottom="60dp"
            android:background="@drawable/fondoedittexttrans"
            android:ems="10"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:text="@string/txtContra"
            android:textColor="@color/gris" />

        <Button
            android:id="@+id/btnEntrar"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="200dp"
            android:layout_height="120dp"
            android:background="@drawable/btnentrar"
            android:gravity="center"
            android:text="@string/txtbtnEntrar"
            android:textColor="@color/white"
            app:backgroundTint="@color/trans"
            app:backgroundTintMode="add" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>