<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondocamiones"
    tools:context=".Camiones">

    <LinearLayout
        android:id="@+id/LLCamiones"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/menu"
            app:backgroundTint="@color/blancotrans" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnVuelos"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/btnmenuscamion"
                android:paddingTop="0dp"
                android:paddingBottom="0dp"
                android:text="@string/txtVuelo"
                android:textColor="@color/white"
                android:textSize="@dimen/txtbotones"
                app:backgroundTintMode="add" />

            <Button
                android:id="@+id/btnTrenes"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/btnmenuscamion"
                android:paddingTop="0dp"
                android:paddingBottom="0dp"
                android:text="@string/txtTren"
                android:textColor="@color/white"
                android:textSize="@dimen/txtbotones"
                app:backgroundTintMode="add" />

            <Button
                android:id="@+id/btnCamiones"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/btnmenuscamion"
                android:paddingTop="0dp"
                android:paddingBottom="0dp"
                android:text="@string/txtCamion"
                android:textColor="@color/white"
                android:textSize="@dimen/txtbotones"
                app:backgroundTintMode="add" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:background="@color/fondoinicioCamiones"
                android:paddingLeft="10dp"
                android:text="@string/txtNumCamion"
                android:textColor="@color/blancotrans"
                android:textSize="@dimen/txtViaje" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:background="@color/fondoinicioCamiones"
                android:paddingLeft="10dp"
                android:text="@string/txtNumBoletoCamion"
                android:textColor="@color/blancotrans"
                android:textSize="@dimen/txtboleto" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="40dp"
                android:background="@color/fondoinicioCamiones"
                android:paddingLeft="10dp"
                android:text="@string/txtNombreCompradorCamion"
                android:textColor="@color/blancotrans"
                android:textSize="@dimen/txtnombre" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtFecha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/txtnombre" />

                <TextView
                    android:id="@+id/txtHora"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/txtnombre" />
            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:background="@drawable/menublancocamion">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginLeft="30dp"
                        android:text="@string/txtbuscaCamion"
                        android:textColor="@color/gris" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/iv1"
                            android:layout_width="210dp"
                            android:layout_height="150dp"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/chih" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginStart="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/txtChih"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/txtchihCamion"
                                android:textColor="@color/gris"
                                android:textSize="@dimen/txtChih" />

                            <TextView
                                android:id="@+id/txtChihTiempo"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/txtTiempoCamion"
                                android:textColor="@color/gris"
                                android:textSize="@dimen/txtChihTiempo" />
                        </LinearLayout>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:background="@drawable/lineaseparacion" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="210dp"
                            android:layout_height="260dp"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/df" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginStart="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/txtDF"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/txtchihCamion"
                                android:textColor="@color/gris"
                                android:textSize="@dimen/txtChih" />

                            <TextView
                                android:id="@+id/txtDFHora"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/txtTiempoCamion"
                                android:textColor="@color/gris"
                                android:textSize="@dimen/txtChihTiempo" />
                        </LinearLayout>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:background="@drawable/lineaseparacion" />
                </LinearLayout>
            </ScrollView>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>